dist/1.0/bin/sample/retrieveUnpackaged/objects/ServiceComponentRelation__c.object
<CustomObject>
    <description>Relationship between Service Components</description>
    <fields>
        <fullName>ForeignReference__c</fullName>
        <description>Child Service Component</description>
        <inlineHelpText>Child Service Component</inlineHelpText>
        <label>Foreign Reference</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Component Relations (Foreign Reference)</relationshipLabel>
        <relationshipName>Service_Component_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Parent Service Component</description>
        <inlineHelpText>Parent Service Component</inlineHelpText>
        <label>Reference</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Component Relations</relationshipLabel>
        <relationshipName>Service_Component_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceRecordID__c</fullName>
        <description>ID of Relation from Local System</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Relation from Local System</inlineHelpText>
        <label>Source Record ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Service Component Relation</label>
    <nameField>
        <displayFormat>SCR{000000000}</displayFormat>
        <label>Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Component Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Only_GTS_Company_foreign_component</fullName>
        <active>true</active>
        <description>You can choose only service component from GTS Company account.</description>
        <errorConditionFormula>ForeignReference__r.ServiceBundle__r.Account__r.GTS_Company__c = false</errorConditionFormula>
        <errorMessage>In foreign reference field you can choose only component from GTS Company account.</errorMessage>
    </validationRules>
</CustomObject>